fix: correctly align menu icons

--- a/src/web-client/src/components/pages/Dashboard/components/Navigation/Navigation.scss
+++ b/src/web-client/src/components/pages/Dashboard/components/Navigation/Navigation.scss
@@ -6,7 +6,6 @@
   height: 80px;
 
   &__item {
-    height: 55px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,8 +22,9 @@
     &__icon {
       display: flex;
       align-items: center;
-      justify-content: flex-end;
-      flex-basis: 40px;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
 
       .icon--god-favors {
         width: 40px;
